@@ -161,7 +161,6 @@ importFrom(sjstats,table_values)
 importFrom(sjstats,weight)
 importFrom(sjstats,weight2)
 importFrom(sjstats,wtd_sd)
-importFrom(sjstats,xtab_statistics)
 importFrom(stats,AIC)
 importFrom(stats,anova)
 importFrom(stats,aov)
