@@ -14,7 +14,7 @@ sjt.glmer(..., pred.labels = NULL, depvar.labels = NULL,
   show.dev = TRUE, show.hoslem = FALSE, show.family = FALSE,
   string.pred = "Predictors", string.dv = "Dependent Variables",
   string.interc = "(Intercept)", string.obs = "Observations",
-  string.est = "OR", string.ci = "CI", string.se = "std. Error",
+  string.est = NULL, string.ci = "CI", string.se = "std. Error",
   string.p = "p", ci.hyphen = "&nbsp;&ndash;&nbsp;", digits.est = 2,
   digits.p = 3, digits.ci = 2, digits.se = 2, digits.summary = 3,
   cell.spacing = 0.2, cell.gpr.indent = 0.6, sep.column = TRUE,
